After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641039 - Cannot expand/collapse nodes by mouse
Cannot expand/collapse nodes by mouse
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTreeView
2.99.x
Other Linux
: Normal major
: ---
Assigned To: gtktreeview-bugs
gtktreeview-bugs
Depends on: 641150
Blocks:
 
 
Reported: 2011-01-31 15:26 UTC by Milan Crha
Modified: 2011-02-01 16:23 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Milan Crha 2011-01-31 15:26:01 UTC
I use to expand/collapse tree nodes in the tree view by mouse, by clicking the triangle. It stopped working in gtk git master after update to commit 6a8d494. The gtk3-demo works on the first shot, but when I keep it running in the background and return back to it then it stops responding to my expand/collapse requests as well.

Steps to reproduce:
a) run gtk3-demo
b) expand and collapse the "Entry" node by mouse - it works
c) Alt+Tab to the terminal where processed step a)
d) Alt+Tab back to gtk3-demo
e) cannot repeat b)

------------------------------------------------------------------------

I also noticed undesired behaviour, when I collapse a node which has subnodes collapsed, then expanding the parent node expands also children nodes. It didn't use to do it and I consider it a bug.

------------------------------------------------------------------------

The triangle animation moves here like a lazy dog :)

------------------------------------------------------------------------

(I can file separate bugs for each, but the first and the second are the only I really care about.)
Comment 1 Matthias Clasen 2011-02-01 15:05:26 UTC
I have fixed the slowness problem and the unreliability.

Some remaining issues will have to wait till 3.2
Comment 2 Milan Crha 2011-02-01 16:23:29 UTC
Thanks for a fix. I'm at commit 5441ecd of gtk+ master and there are fixed all three things (the animation speed can be still increased, from my point of view, but that's nothing serious). The rest is working as I would expect, thus I'm closing this.